# python-rust-interop-demo

./: LICENSE  README.adoc  README.md  test.py  test.sh  testcase.py
.github/workflows/: tests.yml
examples/cache-yamls/: Cargo.toml
examples/cache-yamls/src/: main.rs
examples/callback/: Cargo.toml  test_today.py  today.py
examples/callback/src/: lib.rs
examples/file/: Cargo.toml
examples/file/src/: lib.rs
examples/genfunc/: Cargo.toml
examples/genfunc/src/: main.rs
examples/gettext/: Cargo.toml
examples/gettext/src/: main.rs
examples/magicfunc/: Cargo.toml
examples/sort/: Cargo.toml
examples/sort/src/: main.rs
examples/sort2/: Cargo.toml
examples/sort2/src/: main.rs
examples/wsgi/: Cargo.toml
examples/wsgi/src/: main.rs
examples/yattag/: Cargo.toml
examples/yattag/src/: main.rs
src/: lib.rs
