[package]
name = "sort2"
version = "0.1.0"
authors = ["Miklos Vajna <vmiklos@collabora.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_icu_ucol = "1.0.0"
rust_icu_ustring = "1.0.0"

# Till <https://github.com/google/rust_icu/pull/208> hits a release.
[patch.crates-io]
rust_icu_ustring = { git = "https://github.com/google/rust_icu" }
rust_icu_ucol = { git = "https://github.com/google/rust_icu" }
